Correcciones en los forms y comienzo del Model
Message box
Limpiar Forms
Arreglo pais

--- a/src/PagoElectronico/PagoElectronico/PagoElectronico.csproj
+++ b/src/PagoElectronico/PagoElectronico/PagoElectronico.csproj
@@ -206,6 +206,16 @@
     <Compile Include="Login\Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="Model\Persona.cs" />
+    <Compile Include="Model\Cuenta.cs" />
+    <Compile Include="Model\Emisor.cs" />
+    <Compile Include="Model\Funcionalidad.cs" />
+    <Compile Include="Model\Moneda.cs" />
+    <Compile Include="Model\Pais.cs" />
+    <Compile Include="Model\Rol.cs" />
+    <Compile Include="Model\Tarjeta.cs" />
+    <Compile Include="Model\Tipo_Cuenta.cs" />
+    <Compile Include="Model\Usuario.cs" />
     <Compile Include="Modificar contrasenia\ModificarContrasenia.cs">
       <SubType>Form</SubType>
     </Compile>
