--- a/src/PagoElectronico/PagoElectronico/PagoElectronico.csproj
+++ b/src/PagoElectronico/PagoElectronico/PagoElectronico.csproj
@@ -51,6 +51,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualStudio.DebuggerVisualizers, Version=9.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -164,12 +165,14 @@
     <Compile Include="Consulta Saldos\Seleccion.Designer.cs">
       <DependentUpon>Seleccion.cs</DependentUpon>
     </Compile>
+    <Compile Include="Control.cs" />
     <Compile Include="Depositos\DepositoNuevo.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Depositos\DepositoNuevo.Designer.cs">
       <DependentUpon>DepositoNuevo.cs</DependentUpon>
     </Compile>
+    <Compile Include="Excepciones\ValidarDatos.cs" />
     <Compile Include="Facturacion\Facturar.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -206,6 +209,10 @@
     <Compile Include="Login\Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="Model\Campo.cs" />
+    <Compile Include="Model\Encriptacion.cs" />
+    <Compile Include="Model\Error.cs" />
+    <Compile Include="Model\ICampo.cs" />
     <Compile Include="Model\Persona.cs" />
     <Compile Include="Model\Cuenta.cs" />
     <Compile Include="Model\Emisor.cs" />
@@ -385,6 +392,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ABM Usuario\" />
+    <Folder Include="CapaDAO\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
