Arreglos en la capa DAO como también en el config

--- a/src/PagoElectronico/PagoElectronico/app.config
+++ b/src/PagoElectronico/PagoElectronico/app.config
@@ -6,7 +6,7 @@
   <connectionStrings>
     <add name="GD1C2015" connectionString="Data Source=(LOCAL)\SQLSERVER2008;Initial Catalog=GD1C2015;User ID=gd; Password=gd2015"/>
   </connectionStrings>
-  <appSetings>
+  <appSettings>
     <add key="fechaSistema" value="01/01/2017"/>
-  </appSetings>
+  </appSettings>
 </configuration>
