--- a/src/PagoElectronico/PagoElectronico/PagoElectronico.csproj
+++ b/src/PagoElectronico/PagoElectronico/PagoElectronico.csproj
@@ -154,6 +154,7 @@
     <Compile Include="ABM Rol\Seleccion.Designer.cs">
       <DependentUpon>Seleccion.cs</DependentUpon>
     </Compile>
+    <Compile Include="CapaDAO\DAOListado.cs" />
     <Compile Include="CapaDAO\DAOCliente.cs" />
     <Compile Include="CapaDAO\DAOCuenta.cs" />
     <Compile Include="CapaDAO\DAORol.cs" />
