Agregando DAODepositos y DAOTarjeta, encaminando el Deposito, listo el seleccionar tarjeta

--- a/src/PagoElectronico/PagoElectronico/PagoElectronico.csproj
+++ b/src/PagoElectronico/PagoElectronico/PagoElectronico.csproj
@@ -154,6 +154,8 @@
     <Compile Include="ABM Rol\Seleccion.Designer.cs">
       <DependentUpon>Seleccion.cs</DependentUpon>
     </Compile>
+    <Compile Include="CapaDAO\DAOTarjeta.cs" />
+    <Compile Include="CapaDAO\DAODeposito.cs" />
     <Compile Include="CapaDAO\DAOConsultaSaldos.cs" />
     <Compile Include="CapaDAO\DAOLogin.cs" />
     <Compile Include="CapaDAO\DAOListado.cs" />
