ABM Cliente incompleto

--- a/src/PagoElectronico/PagoElectronico/PagoElectronico.csproj
+++ b/src/PagoElectronico/PagoElectronico/PagoElectronico.csproj
@@ -157,6 +157,7 @@
     <Compile Include="CapaDAO\DAOCliente.cs" />
     <Compile Include="CapaDAO\DAOCuenta.cs" />
     <Compile Include="CapaDAO\DAORol.cs" />
+    <Compile Include="CapaDAO\DAOUsuario.cs" />
     <Compile Include="CapaDAO\SqlConnector.cs" />
     <Compile Include="Consulta Saldos\Saldo.cs">
       <SubType>Form</SubType>
