Empezando con Transferencias y refactor a selección de tarjetas

--- a/src/PagoElectronico/PagoElectronico/PagoElectronico.csproj
+++ b/src/PagoElectronico/PagoElectronico/PagoElectronico.csproj
@@ -154,6 +154,7 @@
     <Compile Include="ABM Rol\Seleccion.Designer.cs">
       <DependentUpon>Seleccion.cs</DependentUpon>
     </Compile>
+    <Compile Include="CapaDAO\DAOTransferencia.cs" />
     <Compile Include="CapaDAO\DAOOperacion.cs" />
     <Compile Include="CapaDAO\DAORetiro.cs" />
     <Compile Include="CapaDAO\DAOTarjeta.cs" />
