Refactors por aquí y por allá, fecha de config con hora OJO

--- a/src/PagoElectronico/PagoElectronico/app.config
+++ b/src/PagoElectronico/PagoElectronico/app.config
@@ -7,6 +7,6 @@
     <add name="GD1C2015" connectionString="Data Source=(LOCAL)\SQLSERVER2008;Initial Catalog=GD1C2015;User ID=gd; Password=gd2015"/>
   </connectionStrings>
   <appSettings>
-    <add key="fechaSistema" value="01/01/2017"/>
+    <add key="fechaSistema" value="31/12/2017 14:20:13"/>
   </appSettings>
 </configuration>
